# pawlin_tech_test_task

./: README.md  config.py  create_database.py  dataset_fluffy_final.csv  main.py  pyproject.toml  task_2_3_4.ipynb
db/: database.py  models.py
db/queries/: chicken_post_queries.py
files/: csv_reader.py  csv_writer.py
